# model_matching_tracking

./: CMakeLists.txt  README.md  config.yaml  main.cpp
config/: config.yaml  initial_guess.txt
include/: design.md
include/model_match/: common.hpp  model_match.h
include/model_track/: model_track.h
src/: model_match.cpp  model_track.cpp  test_match.cpp  test_single.cpp  test_track.cpp
